# DUCS

./: README.md  alembic.ini  pyproject.toml
dugs/: __init__.py  __main__.py  bot.py  companies.py  constants.py  enums.py  errors.py  log.py
dugs/alembic/: env.py
dugs/cogs/: admin.py  commands.py  company.py  errors.py  events.py  help.py  leaderboard.py  tasks.py
dugs/components/: buttons.py  views.py
dugs/database/: __init__.py  company.py  member.py
dugs/utils/: __init__.py  command_utils.py
